; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/arch/mips/ath79/extr_mach-tl-wr1043nd.c_tl_wr1043nd_rtl8366rb_hw_reset.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/arch/mips/ath79/extr_mach-tl-wr1043nd.c_tl_wr1043nd_rtl8366rb_hw_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtl8366_smi = type { i32 }

@AR71XX_RESET_GE0_PHY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtl8366_smi*, i32)* @tl_wr1043nd_rtl8366rb_hw_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tl_wr1043nd_rtl8366rb_hw_reset(%struct.rtl8366_smi* %0, i32 %1) #0 {
  %3 = alloca %struct.rtl8366_smi*, align 8
  %4 = alloca i32, align 4
  store %struct.rtl8366_smi* %0, %struct.rtl8366_smi** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @AR71XX_RESET_GE0_PHY, align 4
  %9 = call i32 @ath79_device_reset_set(i32 %8)
  br label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @AR71XX_RESET_GE0_PHY, align 4
  %12 = call i32 @ath79_device_reset_clear(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  ret void
}

declare dso_local i32 @ath79_device_reset_set(i32) #1

declare dso_local i32 @ath79_device_reset_clear(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
